# shooter

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
engine/: Cargo.toml  build.bat  imgui.ini
engine/scenes/: scene1
engine/src/: camera.rs  default_init.rs  drawing.rs  fps_counter.rs  game_state.rs  image.rs  input.rs  lib.rs  shader.rs  time.rs  transform.rs  vulkan.rs  window.rs
engine/src/gui/: imgui.rs
engine/src/mesh/: mesh.rs  mod.rs  model.rs  wavefront.rs
engine/src/shaders/: gui.vs  sprite.vs  text.fs
engine/src/utils/: file.rs  img.rs  mod.rs
engine/src/utils/gl/: mod.rs  texture.rs
shooter-client/: Cargo.toml  MyModule.hx  mymodule.neko  notes.md
shooter-client/assets/Bow/: Bow.3ds  Bow.blend  Bow.blend1  Bow.rar
shooter-client/scripts/: camera.lua  debug.lua  entities.lua  foo.lua  globals.lua  helpers.lua  main.lua  player.lua  scene.lua
shooter-client/scripts/math/: color.lua  intersect.lua  mat4.lua  mesh.lua  octree.lua  quat.lua  utils.lua  vec2.lua
shooter-client/scripts/tests/: functionality.lua
shooter-client/src/: camera.rs  collision.rs  default.fs  default.vs  drawing.rs  entities.rs  entity.rs  fps_counter.rs  game_state.rs  gui.rs  image.rs  input.rs  main.rs  math.rs  mesh.rs  project_format.rs  scene.rs  shader.rs  sprite.rs  text.rs  texture.rs  time.rs  transform.rs
shooter-client/src/engine/: drawing.rs  mod.rs  shader.rs  transform.rs
shooter-client/src/engine/gui/: imgui.rs
shooter-client/src/engine/mesh/: mod.rs  model.rs  wavefront.rs
shooter-client/src/engine/shaders/: default.vs  texture_atlas.fs
shooter-client/src/engine/utils/: img.rs
shooter-client/src/gui/: imgui.rs  mod.rs
shooter-client/src/mesh/: mesh.rs  mod.rs  model.rs  wavefront.rs
shooter-client/src/scripting/: lua.rs  mod.rs  mymodule.neko  neko.rs  script.rs  userdata.rs
shooter-client/src/shaders/: default.fs  default.vs  gui.fs  gui.vs  screen_space.vs  solid_color.fs  sprite.vs  text.fs  text.vs  texture_atlas.fs
shooter-client/src/tests/: mod.rs
shooter-client/src/utils/: file.rs  gl.rs  img.rs  mod.rs
shooter-client/src/utils/gl/: mod.rs  texture.rs
shooter-common/: Cargo.toml
shooter-common/src/: lib.rs
shooter-server/: Cargo.toml
shooter-server/src/: main.rs
