[package]
name = "engine"
version = "0.1.0"
authors = ["Kristian Fjeld Hasselknippe <kristian_hasselknippe@outlook.com>"]

[dependencies]
gl = "0.6.0"
glutin = "*"
nalgebra = "0.16"
ncollide3d = "0.17"
itertools = "0.7.8"
image = "*"
alga = "0.5.1"
rusttype = "0.2.1"
time = "0.1.38"
libc = "0.2.0"
notify = "4.0.0"
ordered-float = "0.5.0"
xml-rs = "0.7"
copy_arena = "0.1.1"
wavefront_obj = "5.1.0"
lazy_static = "1.0"
maplit = "1.0.1"
imgui-sys = "0.0.18"
specs = "*"
specs-derive = "*"