[package]
name = "engine"
version = "0.1.0"
authors = ["Kristian Fjeld Hasselknippe <kristian_hasselknippe@outlook.com>"]

[dependencies]
vulkano = "*"
num-traits = "*"
glutin = "*"
nalgebra-glm = "*"
ncollide3d = "*"
itertools = "*"
image = "*"
alga = "*"
rusttype = "*"
time = "*"
libc = "*"
notify = "*"
ordered-float = "*"
xml-rs = "*"
copy_arena = "*"
wavefront_obj = "*"
lazy_static = "*"
maplit = "*"
imgui-sys = "*"
specs = "*"
specs-derive = "*"