[package]
name = "engine"
version = "0.1.0"
authors = ["Kristian Fjeld Hasselknippe <kristian_hasselknippe@outlook.com>"]

[dependencies]
genmesh = "*"
winit = "*"
vulkano-win = "*"
image = "*"
vulkano = "*"
vulkano-shaders = "*"
num = "*"
glutin = "*"
nalgebra-glm = "*"
ncollide3d = "*"
itertools = "*"
alga = "*"
rusttype = "*"
time = "*"
libc = "*"
notify = "*"
ordered-float = "*"
xml-rs = "*"
copy_arena = "*"
wavefront_obj = "*"
lazy_static = "*"
maplit = "*"
imgui-sys = "*"
specs = "*"
specs-derive = "*"