[package]
name = "shooter-client"
version = "0.1.0"
authors = ["Kristian Fjeld Hasselknippe <kristian_hasselknippe@outlook.com>"]

[dependencies]
gl = "0.6.0"
glutin = "*"
nalgebra = "*"
image = "*"
rusttype = "0.2.1"
alga = "0.5.1"
time = "0.1.38"
libc = "0.2.0"
lua52-sys = "0.1.1"
notify = "4.0.0"
ordered-float = "0.5.0"
xml-rs = "0.7"
copy_arena = "0.1.1"
wavefront_obj = "5.1.0"
lazy_static = "1.0"
maplit = "1.0.1"